[package]
name = "farmer"
version = "0.1.1"
edition = "2024"
description = "Crate to create a bot farm via teloxide"
license = "MIT"
authors = ["Belurgas <morethenworking@outlook.com>"]
repository = "https://github.com/belurgas/farmer"
homepage = "https://github.com/belurgas/farmer"
keywords = ["telegram", "async", "webhook"]
categories = ["asynchronous", "network-programming", "bot"]
readme = "README.md"

[dependencies]
